--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     <audio src="videoplayback.mp3" loop></audio>
     <script>
         let sound = new Audio("videoplayback.mp3");
+        sound.volume = 0.4;
         document.addEventListener('click', ()=>{
             sound.play()
         });
